--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,16 @@
         height: 540px; /* Maintain the aspect ratio */
     }
 
+    .badge3 {
+        width: 920px; /* Set the desired width */
+        height: auto; /* Maintain the aspect ratio */
+    }
+
+    .badge4 {
+        width: 1870px; /* Set the desired width */
+        height: auto; /* Maintain the aspect ratio */
+    }
+
     .center-container {
         text-align: right;
     }
@@ -101,36 +111,36 @@
 
     /* Set fixed widths for columns */
     th:nth-child(1), td:nth-child(1) {
-        width: 500px;
+        width: 300px;
     }
 
     th:nth-child(2) {
-        width: 500px;
+        width: 300px;
         text-align: center;
     }
 
     td:nth-child(2) {
-        width: 500px;
+        width: 300px;
         text-align: left;
     }
 
     th:nth-child(3) {
-        width: 500px;
+        width: 300px;
         text-align: center;
     }
 
     td:nth-child(3) {
-        width: 500px;
+        width: 300px;
         text-align: left;
     }
 
     th:nth-child(4) {
-        width: 500px;
+        width: 300px;
         text-align: center;
     }
     
     td:nth-child(4) {
-        width: 500px;
+        width: 300px;
         text-align: left;
     }
 
